New in v1.1.18 (????/??/??)
---------------------------



New in v1.1.17 (2008/07/17)
---------------------------

Move make_file_dict_python so that it is run on the remote end instead of
the local end. This improves performance for Windows hosts since it eliminates
the lag due to checking os.name. It also makes the Windows design parallel
to the Posix design, since the Windows method now returns a dictionary across
the wire. (Andrew Ferguson)

Catch EPERM error when trying to write extended attributes. (Andrew Ferguson)

Allow rdiff-backup to be built into a single executable on Windows using
py2exe ("setup.py py2exe --single-file"). (Patch from Josh Nisly)

Properly handle uid/gid comparison when the metadata about a destination
file has become corrupt. Closes Debian bug #410586. (Andrew Ferguson)

Properly handle hardlink comparison when the metadata about a destination
hardlink has become corrupt. Closes Debian bug #486653. (Andrew Ferguson)

Fix typo in fs_abilities noticed by Martin Krafft. Add EILSEQ ("Invalid or
incomplete multibyte or wide character") to the list of recoverable errors.
Thanks to Hanno Stock for catching that. (Andrew Ferguson)

Catch another reasonable error when reading EAs. (Andrew Ferguson)

Use the Python os.lstat() on Windows. (Patch from Josh Nisly)

Support for Windows ACLs. (Patch from Josh Nisly and Fred Gansevles)

Fix user_group.py to run on native Windows, which lacks grp and pwd Python
modules. (Patch from Fred Gansevles)

Optimize --check-destination and other functions by determining the increment
files server-side instead of client-side. (Patch from Josh Nisly)

Actually make rdiff-backup robust to failure to read an ACL because the file
cannot be found. (Andrew Ferguson)

Get makedist working on Windows. (Patch from Josh Nisly)


New in v1.1.16 (2008/06/17)
---------------------------

Properly preserve hard links when the destination does not support them.